Updated with version: 4.0.0 53.0 changes

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1,15 +1,7 @@
 {
-  "description":{
-    "message":"Най-популярното разширение за Chrome с над 60 милиона потребители! Блокира реклами в световната мрежа.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description2":{
     "message":"Най-популярното разширение за Chrome с над 60 милиона потребители! Блокира реклами в световната мрежа.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "name_releasebuild":{
-    "description":"Extension name to be shown for release / published builds.  Should not be translated",
-    "message":"AdBlock"
   },
   "description_edge":{
     "message":"AdBlock. Блокер на реклами №1 с над 200 милиона изтегляния! Блокира реклами в световната мрежа.",
@@ -1932,5 +1924,17 @@
   "ok":{
     "message":"ДА",
     "description":"Message for help flow in popup menu."
+  },
+  "help":{
+    "message":"Помощ",
+    "description":"Text in the aria-label attribute of the support icon on the pop-up menu."
+  },
+  "settings":{
+    "message":"Настройки",
+    "description":"Text in the aria-label attribute of the gear icon on the pop-up menu."
+  },
+  "error":{
+    "message":"Грешка",
+    "description":"Text in the aria-label attribute of an icon indicating an error occurred."
   }
 }
