--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -1,15 +1,7 @@
 {
-  "description":{
-    "message":"Nejpopulárnější rozšíření pro Chrome s více než 60 milióny uživatelů! Blokuje reklamy po celém webu.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description2":{
     "message":"Nejpopulárnější rozšíření pro Chrome s více než 60 milióny uživatelů! Blokuje reklamy po celém webu.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "name_releasebuild":{
-    "description":"Extension name to be shown for release / published builds.  Should not be translated",
-    "message":"AdBlock"
   },
   "description_edge":{
     "message":"AdBlock. Jednička v blokování reklam s více než 200 milióny stažení. Blokuje reklamy po celém webu.",
@@ -1924,5 +1916,21 @@
   "ok":{
     "message":"OK",
     "description":"Message for help flow in popup menu."
+  },
+  "help":{
+    "message":"Pomoc",
+    "description":"Text in the aria-label attribute of the support icon on the pop-up menu."
+  },
+  "settings":{
+    "message":"Nastavení",
+    "description":"Text in the aria-label attribute of the gear icon on the pop-up menu."
+  },
+  "error":{
+    "message":"Chyba",
+    "description":"Text in the aria-label attribute of an icon indicating an error occurred."
+  },
+  "learn_more_without_period":{
+    "message":"Zjistěte více",
+    "description":"Text in the aria-label attribute of an icon linking to extra information about an option."
   }
 }
