--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -1,8 +1,4 @@
 {
-  "description":{
-    "message":"הרחבת Chrome הפופולרית ביותר, עם יותר מ־60 מיליון משתמשים! חוסמת פרסומות בכל רחבי הרשת.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description2":{
     "message":"הרחבת Chrome הפופולרית ביותר, עם יותר מ־60 מיליון משתמשים! חוסמת פרסומות בכל רחבי הרשת.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
@@ -10,10 +6,6 @@
   "name_devbuild":{
     "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
     "message":"בניית פיתוח של AdBlock"
-  },
-  "name_releasebuild":{
-    "description":"Extension name to be shown for release / published builds.  Should not be translated",
-    "message":"AdBlock"
   },
   "description_edge":{
     "message":"AdBlock. חוסם הפרסומות #1 עם למעלה מ־200 מיליון הורדות. חוסם פרסומות מכל רחבי הרשת.",
@@ -2077,20 +2069,76 @@
     "message":"כהה",
     "description":"Name of a theme in the Themes tab of the Options page"
   },
+  "ocean_theme":{
+    "message":"אוקיינוס",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "sunshine_theme":{
+    "message":"אור שמש",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "rebecca_purple_theme":{
+    "message":"סגול רבקה",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme":{
     "message":"החל ערכת נושא",
     "description":"Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
+  },
+  "callout_new_feature":{
+    "message":"חדש!",
+    "description":"Text to callout a new feature"
   },
   "myadblock_more_coming_soon":{
     "message":"עוד מאפיינים יגיעו בקרוב!",
     "description":"Title of the teaser MyAdBlock feature box in the MyAdBlock tab of the Options page"
   },
+  "myadblock_payment_not_available_callout":{
+    "message":"אוי לא!",
+    "description":"The text notifying something is wrong in the payment iframe in the Options page."
+  },
   "devtools_type_title":{
     "description":"Type column header text",
     "message":"סוג"
   },
+  "check_whitelist":{
+    "message":"בוא נבדוק את הרשימה הלבנה שלך כדי לראות אם היא עשויה להיות הבעיה.",
+    "description":"Message for help flow in popup menu."
+  },
   "ok":{
     "message":"אישור",
     "description":"Message for help flow in popup menu."
+  },
+  "updating_filter_lists":{
+    "message":"AdBlock מעדכן את רשימות המסננים שלך כעת כדי לראות אם הן עשויות להיות הבעיה.",
+    "description":"Message for help flow in popup menu."
+  },
+  "problem_solved":{
+    "message":"נפלא! הבעיה נפתרה.",
+    "description":"Message for help flow in popup menu."
+  },
+  "help":{
+    "message":"עזרה",
+    "description":"Text in the aria-label attribute of the support icon on the pop-up menu."
+  },
+  "settings":{
+    "message":"הגדרות",
+    "description":"Text in the aria-label attribute of the gear icon on the pop-up menu."
+  },
+  "error":{
+    "message":"שגיאה",
+    "description":"Text in the aria-label attribute of an icon indicating an error occurred."
+  },
+  "adblock_will_pause_on_this_site":{
+    "message":"במקרה שנלחץ, AdBlock יפסיק לחסום פרסומות באתר זה.",
+    "description":"Second sentence in the aria-label of the pop-up menu action to pause blocking ads on this site."
+  },
+  "adblock_will_pause_on_all_sites":{
+    "message":"במקרה שנלחץ, AdBlock יפסיק לחסום פרסומות בכל האתרים.",
+    "description":"Second sentence in the aria-label of the pop-up menu action to pause blocking ads on all sites."
+  },
+  "adblock_will_block_ads_again":{
+    "message":"במקרה שנלחץ, AdBlock יחסום פרסומות שוב.",
+    "description":"Second sentence in the aria-label of the pop-up menu action to resume blocking ads."
   }
 }
