--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -1,15 +1,7 @@
 {
-  "description":{
-    "message":"A legnépszerűbb Chrome kiegészítő, több mint 60 millió felhasználóval! Reklámokat blokkol szerte a weben.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description2":{
     "message":"A legnépszerűbb Chrome kiegészítő, több mint 60 millió felhasználóval! Reklámokat blokkol szerte a weben.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "name_releasebuild":{
-    "description":"Extension name to be shown for release / published builds.  Should not be translated",
-    "message":"Az AdBlock"
   },
   "description_edge":{
     "message":"AdBlock. Az elsőszámú hirdetés blokkoló, több mint 200 millió letöltéssel. Blokkolja a hirdetéseket szerte a hálón.",
@@ -1928,5 +1920,17 @@
   "ok":{
     "message":"OK",
     "description":"Message for help flow in popup menu."
+  },
+  "help":{
+    "message":"Súgó",
+    "description":"Text in the aria-label attribute of the support icon on the pop-up menu."
+  },
+  "settings":{
+    "message":"Beállítások",
+    "description":"Text in the aria-label attribute of the gear icon on the pop-up menu."
+  },
+  "error":{
+    "message":"Hiba",
+    "description":"Text in the aria-label attribute of an icon indicating an error occurred."
   }
 }
