--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -1,19 +1,11 @@
 {
-  "description":{
-    "message":"6천만 명 이상의 선택을 받은 가장 유명한 Chrome 확장 프로그램! 웹상의 광고를 차단할 수 있습니다.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description2":{
     "message":"6천만 명 이상의 선택을 받은 가장 유명한 Chrome 확장 프로그램! 웹상의 광고를 차단할 수 있습니다.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
   "name_devbuild":{
     "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
-    "message":"Adblock 개발 빌드"
-  },
-  "name_releasebuild":{
-    "description":"Extension name to be shown for release / published builds.  Should not be translated",
-    "message":"AdBlock은"
+    "message":"AdBlock 개발 빌드"
   },
   "description_edge":{
     "message":"AdBlock. 2억 회 이상 다운로드된 1위 광고 차단기. 인터넷의 모든 광고를 차단하세요.",
@@ -2112,5 +2104,17 @@
   "ok":{
     "message":"확인",
     "description":"Message for help flow in popup menu."
+  },
+  "help":{
+    "message":"도움말",
+    "description":"Text in the aria-label attribute of the support icon on the pop-up menu."
+  },
+  "settings":{
+    "message":"설정",
+    "description":"Text in the aria-label attribute of the gear icon on the pop-up menu."
+  },
+  "error":{
+    "message":"오류",
+    "description":"Text in the aria-label attribute of an icon indicating an error occurred."
   }
 }
