--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -1,15 +1,7 @@
 {
-  "description":{
-    "message":"Den mest populære Chrome-utvidelsen med over 40 millioner brukere! Blokkerer annonser over hele internettet.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description2":{
     "message":"Den mest populære Chrome-utvidelsen med over 40 millioner brukere! Blokkerer annonser over hele internettet.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "name_releasebuild":{
-    "description":"Extension name to be shown for release / published builds.  Should not be translated",
-    "message":"AdBlock"
   },
   "description_edge":{
     "message":"AdBlock. Reklameblokkerer #1 med over 200 millioner nedlastninger. Blokkerer reklamer over hele internettet.",
@@ -1884,5 +1876,17 @@
   "ok":{
     "message":"OK",
     "description":"Message for help flow in popup menu."
+  },
+  "help":{
+    "message":"Hjelp",
+    "description":"Text in the aria-label attribute of the support icon on the pop-up menu."
+  },
+  "settings":{
+    "message":"Innstillinger",
+    "description":"Text in the aria-label attribute of the gear icon on the pop-up menu."
+  },
+  "error":{
+    "message":"Feil",
+    "description":"Text in the aria-label attribute of an icon indicating an error occurred."
   }
 }
