--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -1,8 +1,4 @@
 {
-  "name_releasebuild":{
-    "description":"Extension name to be shown for release / published builds.  Should not be translated",
-    "message":"AdBlock"
-  },
   "description_edge":{
     "message":"AdBlock. 200 milyonun üzerinde indirmeyle #1 numaralı reklam engelleyicisi. Tüm web sitelerindeki reklamları engeller.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1038,7 +1034,7 @@
     "description":"Instruction for how to check Firefox for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefoxorchrome_2":{
-    "message":"Eğer yüklü değilse, Firefox için Adblock Plus veya Chrome için Adblock yükleyin.",
+    "message":"Eğer yüklü değilse, Firefox için Adblock Plus veya Chrome için AdBlock yükleyin.",
     "description":"Instruction for how to check Firefox/Chrome for a reported ad. Don't translate the name 'Adblock Plus'."
   },
   "checkinfirefox_3":{
