--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,14 @@
 
 UNRELEASED:
 
+Version: 4.0.0, Date: 2019-11-24
+- Updated translations
+- Add logic to enroll all (new and existing) users in AdBlock Premium
+- Added a limit of 2 to the image replacements attempted on Facebook, as is done on other sites
+- Removed AdBlock Premium test code
+- Minor style modifications the AdBlock popup menu and the AdBlock Options pages
+- Added preventative logic to the translation framework
+
 Version: 3.62.0, Date: 2019-11-19
 - Updated translations
 - Changed all references from MyAdBlock to Premium
