--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -1,6 +1,6 @@
 {
   "description": {
-    "message": "La extensión más popular de Chrome, ¡con más de 60 millones de usuarios! Bloquea anuncios de toda la web.",
+    "message": "Bloquea anuncios y ventanas emergentes en YouTube, Facebook, Twitch y todos tus sitios web favoritos.",
     "description": "Extension description in manifest. Should not exceed 132 characters."
   },
   "description2": {
@@ -12,8 +12,8 @@
     "message": "Versión de desarrollo de AdBlock"
   },
   "name_releasebuild": {
-    "description": "Extension name to be shown for release / published builds.  Should not be translated",
-    "message": "AdBlock"
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock: el mejor bloqueador de anuncios"
   },
   "description_edge": {
     "message": "AdBlock. El bloqueador de anuncios número 1 con más de 200 millones de descargas. Bloquea anuncios de toda la web.",
@@ -2225,6 +2225,10 @@
     "message": "Morado Rebecca",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "solarized_light_theme": {
+    "message": "Luz solar",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Aplicar tema",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
@@ -2278,24 +2282,8 @@
     "description": "The sub-title of an error message box in payment iframe in the Options page."
   },
   "sync_tab_item": {
-    "message": "Sincronizar",
+    "message": "Copia de seguridad y Sincronización",
     "description": "Title of the Sync sub-tab of the Options page"
-  },
-  "myadblock_sync_description": {
-    "message": "Sincroniza tus preferencias entre diferentes navegadores y dispositivos",
-    "description": "Text on the MyAdBlock tab, Sync panel of the Options page"
-  },
-  "sync_check_status_text": {
-    "message": "Sincroniza y personaliza AdBlock entre extensiones [[desactivar sincronización]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_on_text": {
-    "message": "Sincroniza y personaliza AdBlock entre extensiones [[activar sincronización]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_off_btn_text": {
-    "message": "Desactivar",
-    "description": "button text on the Sync sub-tab of the Options page"
   },
   "sync_turn_on_invalid_name_text": {
     "message": "Ponle nombre a esta extensión para continuar",
@@ -2310,7 +2298,7 @@
     "description": "section title text on the Sync sub-tab of the Options page"
   },
   "sync_header_message_no_license": {
-    "message": "Danos unos instantes para preparar la sincronización.",
+    "message": "Danos unos instantes para que preparemos la sincronización.",
     "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
   },
   "sync_header_message_getting_license": {
@@ -2318,7 +2306,7 @@
     "description": "message to users on the sync page when the extension is getting the license"
   },
   "sync_header_message_in_progress": {
-    "message": "Sincronización en proceso…",
+    "message": "Sincronización en proceso...",
     "description": "message to users on the options pages when syncing with the server is in progress"
   },
   "sync_header_message_sync_complete": {
@@ -2334,35 +2322,27 @@
     "description": "start of error message to users on the sync page when sync fails."
   },
   "sync_header_message_setup_fail_part_2": {
-    "message": "Activa la sincronización de nuevo en unos minutos.",
+    "message": "Prueba a añadir esta extensión en unos minutos.",
     "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_error_prefix": {
     "message": "Esta extensión no estaba sincronizada.",
     "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
   },
-  "sync_header_message_error_suffix": {
-    "message": "Vuelve a intentarlo más tarde.",
-    "description": "Part of an sync error message to users on the Options page or AdBlock popup menu."
-  },
   "sync_header_message_old_commit_version_part_2": {
     "message": "Hemos sincronizado esta extensión y revertido tus cambios.",
     "description": "part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_old_commit_version_part_3": {
-    "message": "Vuelve a introducir los cambios.",
+    "message": "Vuelve a cargar la página y aplica tus cambios de nuevo.",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
-  "sync_header_error_revert_message_part_2": {
-    "message": "Se han revertido los cambios.",
-    "description": "part 2 of a message to users on the sync page when sending the sync data fails for some unknown reason."
-  },
   "sync_header_error_save_message_part_2": {
-    "message": "No se han podido sincronizar los cambios.",
+    "message": "Esta extensión no ha sido sincronizada.",
     "description": "part 2 of a message to users on the Options pages when sending the sync data fails for some unknown reason."
   },
   "sync_header_error_save_message_part_3": {
-    "message": "Intenta sincronizar de forma manual dentro de un rato.",
+    "message": "Prueba a sincronizar manualmente más tarde.",
     "description": "part 3 of a message to users on the Options pages when sending the sync data fails for some unknown reason."
   },
   "sync_header_message_old_commit_version_customize_tab_part_2": {
@@ -2372,20 +2352,6 @@
   "sync_header_message_old_commit_version_customize_tab_part_3": {
     "message": "Copia tus reglas personalizadas en el portapapeles, vuelve a cargar la página e introduce tus cambios de nuevo.",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
-  },
-  "sync_header_error_message_menu_part_3": {
-    "message": "Vuelve a introducir los cambios.",
-    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
-  },
-  "sync_show_name_text": {
-    "message": "[[$name$]] se ha sincronizado",
-    "description": "message to users on the sync page when which includes the name of the extension / device",
-    "placeholders": {
-      "name": {
-        "content": "$1",
-        "example": "Device 1"
-      }
-    }
   },
   "sync_device_name_list_updated_at_msg": {
     "message": "última actualización: $timestamp$",
@@ -2398,24 +2364,12 @@
     }
   },
   "sync_extension_name_placeholder": {
-    "message": "Ponle nombre a esta extensión…",
+    "message": "Ponle nombre a esta extensión para poder diferenciarla del resto.",
     "description": "placeholder text in the extension / device name field on the sync page"
   },
   "sync_verify_turn_on_text": {
-    "message": "Al activar la sincronización, se eliminarán los ajustes ya existentes de esta extensión.",
+    "message": "Activa Copia de seguridad y Sincronización para eliminar los ajustes existentes en esta extensión.",
     "description": "message text in the extension / device name field on the sync page"
-  },
-  "sync_update_now_section_title": {
-    "message": "Sincronización manual",
-    "description": "section title for the sync now section on the sync page"
-  },
-  "sync_now_message_part_I": {
-    "message": "Me actualizaré automáticamente.",
-    "description": "message text in the on the sync page "
-  },
-  "sync_now_message_part_II": {
-    "message": "También puedes sincronizar de manera manual.",
-    "description": "message text in the on the sync page "
   },
   "sync_now_btn_text": {
     "message": "Sincronizar ahora",
@@ -2428,6 +2382,54 @@
   "sync_message_old_version_part_2": {
     "message": "[[Actualiza AdBlock]] y podremos sincronizar tus ajustes.",
     "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_premium_cta": {
+    "message": "Domina el arte del bloqueo con funciones Premium como la sincronización.",
+    "description": "AdBlock Premium CTA on the Sync tab"
+  },
+  "backup_sync_settings": {
+    "message": "Hace una copia de seguridad adicional y sincroniza todos los ajustes en cualquier plataforma.",
+    "description": "Description of Sync on Sync tab"
+  },
+  "set_preferences_once": {
+    "message": "Crea tus preferencias una única vez y no vuelvas a preocuparte de perder datos o repetir el mismo proceso para varias extensiones.",
+    "description": "Description of Sync on Sync tab"
+  },
+  "get_sync": {
+    "message": "Conseguir Sincronización",
+    "description": "Link to pay for Sync (part of AdBlock Premium)"
+  },
+  "check_sync_status": {
+    "message": "Comprobar estado de la sincronización",
+    "description": "Button on Sync tab that checks the status of the Sync feature"
+  },
+  "show_details": {
+    "message": "Mostrar detalles",
+    "description": "Toggle that shows the details section"
+  },
+  "hide_details": {
+    "message": "Ocultar detalles",
+    "description": "Toggle that hides the details section"
+  },
+  "add_this_extension": {
+    "message": "Añadir esta extensión",
+    "description": "Button on Sync tab that adds this extension to the Sync process"
+  },
+  "add": {
+    "message": "Añadir",
+    "description": "Button on Sync tab that adds an entered name for this extension to the list of synced extensions"
+  },
+  "this_extension": {
+    "message": "(esta extensión)",
+    "description": "description for name of the current extension"
+  },
+  "confirm_delete_extension": {
+    "message": "¿Seguro que quieres eliminar esta extensión?",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+  },
+  "delete": {
+    "message": "Eliminar",
+    "description": "Text on a delete button"
   },
   "filteracceptable_ads_privacy": {
     "message": "Privacidad de Anuncios aceptables",
@@ -2511,7 +2513,7 @@
   },
   "new_badge": {
     "message": "Nuevo",
-    "description": "DO NOT TRANSLATE. Max 4 characters. Text in the badge of our extension toolbar icon."
+    "description": "Max 4 characters. If it's not possible to translate in four characters or less, please don't translate. Text in the badge of our extension toolbar icon."
   },
   "new_cta_default_text": {
     "message": "Mejorar AdBlock",
@@ -2868,5 +2870,101 @@
   "resume_blocking_ads_period": {
     "message": "Reiniciar bloqueo de anuncios.",
     "description": "First sentence in the aria-label of the pop-up menu action to resume blocking ads."
+  },
+  "do_not_swap_ads": {
+    "message": "No cambiar anuncios",
+    "description": "Text of a clickable option to stop swapping ads with images in the Options page Image Swap tab."
+  },
+  "premium": {
+    "message": "Premium",
+    "description": "Abbreviated name of the AdBlock upgrade."
+  },
+  "adblock_premium": {
+    "message": "AdBlock Premium",
+    "description": "Full name of the AdBlock upgrade."
+  },
+  "premium_enrollment_title": {
+    "message": "¡AdBlock Premium está instalado en este navegador!",
+    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
+  },
+  "premium_enrollment_success": {
+    "message": "Puedes usar el enlace mágico del correo de confirmación para desbloquear AdBlock Premium en otros navegadores de Chrome.",
+    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
+  },
+  "premium_enrollment_link_info": {
+    "message": "Haz clic en el link para copiar los ajustes de AdBlock Premium en otros navegadores Chrome.",
+    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
+  },
+  "premium_page_title": {
+    "message": "AdBlock Premium: una forma mejor de disfrutar de internet.",
+    "description": "The text of the header the AdBlock Premium Options page"
+  },
+  "premium_benefits_explained": {
+    "message": "Como agradecimiento por ayudarnos a crear AdBlock Premium, tendrás acceso a nuevas herramientas y colores.",
+    "description": "Main text of the teaser AdBlock Premium feature in the AdBlock Premium tab of the Options page"
+  },
+  "manage_subscription": {
+    "message": "Gestiona tu suscripción",
+    "description": "Text of link to manage the user's Premium subscription on the Premium tab of the Options page"
+  },
+  "save_custom_settings_cta": {
+    "message": "¿Quieres guardar tus ajustes personalizados de bloqueo y usarlos en todos tus navegadores?",
+    "description": "Part 1 of a Premium call-to-action on the Options page"
+  },
+  "try_backup_sync": {
+    "message": "Prueba Copia de seguridad y Sincronización.",
+    "description": "Part 2 of a Premium call-to-action on the Options page"
+  },
+  "wont_show_again": {
+    "message": "De acuerdo, no volveremos a mostrarte este mensaje.",
+    "description": "Message shown when user opts out of call-to-action"
+  },
+  "check_out_premium": {
+    "message": "Para saber más, échale un vistazo a [[Premium]].",
+    "description": "Part 2 of message shown when user opts out of call-to-action"
+  },
+  "successfully_whitelisted": {
+    "message": "Has puesto esta URL en la lista blanca.",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "future_show_ads": {
+    "message": "Estas páginas seguirán mostrando anuncios en el futuro.",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "change_behavior_settings": {
+    "message": "Puedes modificar este comportamiento en tus [[ajustes]].",
+    "description": "Part of a message on the whitelist and blacklist wizards"
+  },
+  "whitelisted_a_site": {
+    "message": "¡Has puesto una página web en la lista blanca!",
+    "description": "Part 1 of a call-to-action on the whitelist wizard"
+  },
+  "never_lose_settings": {
+    "message": "Aplica estos ajustes a todos tus dispositivos para asegurarte que no perderás tus ajustes si usas Copia de seguridad o Sincronización.",
+    "description": "Part 2 of a call-to-action on the whitelist and blacklist wizards"
+  },
+  "successfully_blocked_ad": {
+    "message": "Has bloqueado este anuncio.",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "future_ads_blocked": {
+    "message": "Los anuncios que coincidan con las reglas establecidas serán bloqueados en el futuro.",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "rule_added_filters": {
+    "message": "Se ha añadido la siguiente regla a los filtros:",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "blocked_something": {
+    "message": "¡Acabas de bloquear un elemento en esta página!",
+    "description": "Part 1 of a call-to-action on the blacklist wizard"
+  },
+  "adblock_looked_like_this": {
+    "message": "¿Y si AdBlock tuviera este aspecto?",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "check_out_themes": {
+    "message": "¡Échale un vistazo a los temas!",
+    "description": "Part 2 of a call-to-action on the Popup menu"
   }
 }
