--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1,6 +1,6 @@
 {
   "description": {
-    "message": "L'estensione più popolare di Chrome, con oltre 60 milioni di utenti! Blocca la pubblicità in tutto il web.",
+    "message": "Blocca annunci e pop-up su YouTube, Facebook, Twitch e sui tuoi siti preferiti.",
     "description": "Extension description in manifest. Should not exceed 132 characters."
   },
   "description2": {
@@ -12,8 +12,8 @@
     "message": "Versione di sviluppo di AdBlock"
   },
   "name_releasebuild": {
-    "description": "Extension name to be shown for release / published builds.  Should not be translated",
-    "message": "AdBlock"
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock: il miglior ad-blocker di sempre"
   },
   "description_edge": {
     "message": "AdBlock. L'ad-blocker numero 1, con oltre 200 milioni di download. Blocca la pubblicità in tutto il web.",
@@ -2225,6 +2225,10 @@
     "message": "Porpora Rebecca",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "solarized_light_theme": {
+    "message": "Luce solarizzata",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Applica tema",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
@@ -2278,24 +2282,8 @@
     "description": "The sub-title of an error message box in payment iframe in the Options page."
   },
   "sync_tab_item": {
-    "message": "Sincronizzazione",
+    "message": "Backup e sincronizzazione",
     "description": "Title of the Sync sub-tab of the Options page"
-  },
-  "myadblock_sync_description": {
-    "message": "Sincronizza le tue preferenze su più browser e dispositivi",
-    "description": "Text on the MyAdBlock tab, Sync panel of the Options page"
-  },
-  "sync_check_status_text": {
-    "message": "Sincronizza e personalizza AdBlock nelle tue estensioni [[Controlla stato]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_on_text": {
-    "message": "Sincronizza e personalizza AdBlock nelle tue estensioni [[Attiva sincronizzazione]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_off_btn_text": {
-    "message": "Disattiva",
-    "description": "button text on the Sync sub-tab of the Options page"
   },
   "sync_turn_on_invalid_name_text": {
     "message": "Dai un nome a questa estensione per continuare",
@@ -2310,7 +2298,7 @@
     "description": "section title text on the Sync sub-tab of the Options page"
   },
   "sync_header_message_no_license": {
-    "message": "Concedici un attimo per rendere disponibile la sincronizzazione.",
+    "message": "Concedici un attimo per preparare la sincronizzazione per te.",
     "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
   },
   "sync_header_message_getting_license": {
@@ -2318,7 +2306,7 @@
     "description": "message to users on the sync page when the extension is getting the license"
   },
   "sync_header_message_in_progress": {
-    "message": "Sincronizzazione in corso…",
+    "message": "Sincronizzazione in corso...",
     "description": "message to users on the options pages when syncing with the server is in progress"
   },
   "sync_header_message_sync_complete": {
@@ -2334,31 +2322,23 @@
     "description": "start of error message to users on the sync page when sync fails."
   },
   "sync_header_message_setup_fail_part_2": {
-    "message": "Prova a riattivare la sincronizzazione tra qualche minuto.",
+    "message": "Riprova ad aggiungere questa estensione tra qualche minuto.",
     "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_error_prefix": {
     "message": "Questa estensione non era sincronizzata.",
     "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
   },
-  "sync_header_message_error_suffix": {
-    "message": "Riprova più tardi.",
-    "description": "Part of an sync error message to users on the Options page or AdBlock popup menu."
-  },
   "sync_header_message_old_commit_version_part_2": {
     "message": "Abbiamo sincronizzato questa estensione e annullato le tue modifiche.",
     "description": "part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_old_commit_version_part_3": {
-    "message": "Apporta di nuovo le tue modifiche.",
+    "message": "Ricarica la pagina e apporta di nuovo le modifiche che desideri.",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
-  "sync_header_error_revert_message_part_2": {
-    "message": "Le tue modifiche sono state annullate.",
-    "description": "part 2 of a message to users on the sync page when sending the sync data fails for some unknown reason."
-  },
   "sync_header_error_save_message_part_2": {
-    "message": "Non è stato possibile sincronizzare le tue modifiche.",
+    "message": "Questa estensione non è sincronizzata.",
     "description": "part 2 of a message to users on the Options pages when sending the sync data fails for some unknown reason."
   },
   "sync_header_error_save_message_part_3": {
@@ -2373,20 +2353,6 @@
     "message": "Copia le tue regole personalizzate negli appunti, ricarica la pagina e apporta di nuovo le tue modifiche.",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
-  "sync_header_error_message_menu_part_3": {
-    "message": "Apporta di nuovo le tue modifiche.",
-    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
-  },
-  "sync_show_name_text": {
-    "message": "[[$name$]] è stato sincronizzato",
-    "description": "message to users on the sync page when which includes the name of the extension / device",
-    "placeholders": {
-      "name": {
-        "content": "$1",
-        "example": "Device 1"
-      }
-    }
-  },
   "sync_device_name_list_updated_at_msg": {
     "message": "ultimo aggiornamento: $timestamp$",
     "description": "message to users on when the sync page was last updated with the name of the extensions / devices (displayed in locale specific format)",
@@ -2398,24 +2364,12 @@
     }
   },
   "sync_extension_name_placeholder": {
-    "message": "Dai un nome a questa estensione…",
+    "message": "Dai un nome a questa estensione in modo da poterla distinguere dalle altre...",
     "description": "placeholder text in the extension / device name field on the sync page"
   },
   "sync_verify_turn_on_text": {
-    "message": "Attivare la sincronizzazione cancellerà le impostazioni esistenti per questa estensione.",
+    "message": "Attivare Backup e sincronizzazione annullerà le impostazioni esistenti per questa estensione.",
     "description": "message text in the extension / device name field on the sync page"
-  },
-  "sync_update_now_section_title": {
-    "message": "Sincronizzazione manuale",
-    "description": "section title for the sync now section on the sync page"
-  },
-  "sync_now_message_part_I": {
-    "message": "Aggiornerò automaticamente.",
-    "description": "message text in the on the sync page "
-  },
-  "sync_now_message_part_II": {
-    "message": "Puoi sincronizzare anche manualmente.",
-    "description": "message text in the on the sync page "
   },
   "sync_now_btn_text": {
     "message": "Sincronizza subito",
@@ -2428,6 +2382,54 @@
   "sync_message_old_version_part_2": {
     "message": "[[Aggiorna AdBlock]] per consentirci di sincronizzare le tue impostazioni.",
     "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_premium_cta": {
+    "message": "Grazie alle funzioni Premium come la sincronizzazione, bloccherai gli annunci come un professionista.",
+    "description": "AdBlock Premium CTA on the Sync tab"
+  },
+  "backup_sync_settings": {
+    "message": "Esegui il backup e la sincronizzazione automatica delle impostazioni di AdBlock su tutti i tuoi dispositivi.",
+    "description": "Description of Sync on Sync tab"
+  },
+  "set_preferences_once": {
+    "message": "Imposta le tue preferenze una volta sola e non preoccuparti più di perdere dati o di apportare manualmente le stesse modifiche su più estensioni.",
+    "description": "Description of Sync on Sync tab"
+  },
+  "get_sync": {
+    "message": "Ottieni la sincronizzazione",
+    "description": "Link to pay for Sync (part of AdBlock Premium)"
+  },
+  "check_sync_status": {
+    "message": "Controlla lo stato della sincronizzazione",
+    "description": "Button on Sync tab that checks the status of the Sync feature"
+  },
+  "show_details": {
+    "message": "Mostra dettagli",
+    "description": "Toggle that shows the details section"
+  },
+  "hide_details": {
+    "message": "Nascondi dettagli",
+    "description": "Toggle that hides the details section"
+  },
+  "add_this_extension": {
+    "message": "Aggiungi questa estensione",
+    "description": "Button on Sync tab that adds this extension to the Sync process"
+  },
+  "add": {
+    "message": "Aggiungi",
+    "description": "Button on Sync tab that adds an entered name for this extension to the list of synced extensions"
+  },
+  "this_extension": {
+    "message": "(questa estensione)",
+    "description": "description for name of the current extension"
+  },
+  "confirm_delete_extension": {
+    "message": "Vuoi davvero eliminare questa estensione?",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+  },
+  "delete": {
+    "message": "Elimina",
+    "description": "Text on a delete button"
   },
   "filteracceptable_ads_privacy": {
     "message": "Privacy Pubblicità accettabili",
@@ -2511,7 +2513,7 @@
   },
   "new_badge": {
     "message": "Novità",
-    "description": "DO NOT TRANSLATE. Max 4 characters. Text in the badge of our extension toolbar icon."
+    "description": "Max 4 characters. If it's not possible to translate in four characters or less, please don't translate. Text in the badge of our extension toolbar icon."
   },
   "new_cta_default_text": {
     "message": "Aggiorna AdBlock",
@@ -2868,5 +2870,101 @@
   "resume_blocking_ads_period": {
     "message": "Ritorna a bloccare gli annunci.",
     "description": "First sentence in the aria-label of the pop-up menu action to resume blocking ads."
+  },
+  "do_not_swap_ads": {
+    "message": "Non sostituire gli annunci",
+    "description": "Text of a clickable option to stop swapping ads with images in the Options page Image Swap tab."
+  },
+  "premium": {
+    "message": "Premium",
+    "description": "Abbreviated name of the AdBlock upgrade."
+  },
+  "adblock_premium": {
+    "message": "AdBlock Premium",
+    "description": "Full name of the AdBlock upgrade."
+  },
+  "premium_enrollment_title": {
+    "message": "Hai completato la configurazione di AdBlock Premium su questo browser!",
+    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
+  },
+  "premium_enrollment_success": {
+    "message": "Puoi usare il link magico presente nella tua email di conferma per sbloccare AdBlock Premium in altri browser Chrome.",
+    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
+  },
+  "premium_enrollment_link_info": {
+    "message": "Cliccare il link semplifica l'installazione di AdBlock Premium in altri browser Chrome.",
+    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
+  },
+  "premium_page_title": {
+    "message": "AdBlock Premium: un modo migliore per navigare su internet.",
+    "description": "The text of the header the AdBlock Premium Options page"
+  },
+  "premium_benefits_explained": {
+    "message": "Attiva AdBlock Premium: in cambio del tuo sostegno, riceverai strumenti e funzionalità più recenti al momento della loro pubblicazione.",
+    "description": "Main text of the teaser AdBlock Premium feature in the AdBlock Premium tab of the Options page"
+  },
+  "manage_subscription": {
+    "message": "Gestisci il tuo abbonamento",
+    "description": "Text of link to manage the user's Premium subscription on the Premium tab of the Options page"
+  },
+  "save_custom_settings_cta": {
+    "message": "Vuoi salvare le impostazioni personalizzate di blocco degli annunci e applicarle su tutti i tuoi browser?",
+    "description": "Part 1 of a Premium call-to-action on the Options page"
+  },
+  "try_backup_sync": {
+    "message": "In tal caso, prova la funzione Backup e sincronizzazione.",
+    "description": "Part 2 of a Premium call-to-action on the Options page"
+  },
+  "wont_show_again": {
+    "message": "Va bene, non ti mostreremo più questo messaggio.",
+    "description": "Message shown when user opts out of call-to-action"
+  },
+  "check_out_premium": {
+    "message": "Per avere maggiori informazioni, consulta [[Premium]].",
+    "description": "Part 2 of message shown when user opts out of call-to-action"
+  },
+  "successfully_whitelisted": {
+    "message": "Hai aggiunto questo URL alla lista bianca.",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "future_show_ads": {
+    "message": "In futuro, queste pagine continueranno a mostrare gli annunci.",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "change_behavior_settings": {
+    "message": "Puoi cambiare questo comportamento nelle tue [[impostazioni]].",
+    "description": "Part of a message on the whitelist and blacklist wizards"
+  },
+  "whitelisted_a_site": {
+    "message": "Hai aggiunto un sito alla lista bianca!",
+    "description": "Part 1 of a call-to-action on the whitelist wizard"
+  },
+  "never_lose_settings": {
+    "message": "Applica questa impostazione su tutti i tuoi dispositivi e assicurati di non perdere mai le impostazioni di AdBlock grazie a Backup e sincronizzazione.",
+    "description": "Part 2 of a call-to-action on the whitelist and blacklist wizards"
+  },
+  "successfully_blocked_ad": {
+    "message": "Hai bloccato questa pubblicità.",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "future_ads_blocked": {
+    "message": "In futuro, gli annunci che corrispondono a queste regole continueranno ad essere bloccati.",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "rule_added_filters": {
+    "message": "Hai aggiunto questa regola ai tuoi filtri:",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "blocked_something": {
+    "message": "Hai bloccato qualcosa su questo sito!",
+    "description": "Part 1 of a call-to-action on the blacklist wizard"
+  },
+  "adblock_looked_like_this": {
+    "message": "E se AdBlock avesse questo aspetto?",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "check_out_themes": {
+    "message": "Dai un'occhiata ai temi!",
+    "description": "Part 2 of a call-to-action on the Popup menu"
   }
 }
