--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -1,8 +1,4 @@
 {
-  "description":{
-    "message":"Sambungan Chrome yang paling popular, dengan hampir 60 juta pengguna! Sekat iklan di seluruh web.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description2":{
     "message":"Sambungan Chrome yang paling popular, dengan hampir 60 juta pengguna! Sekat iklan di seluruh web.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
@@ -10,10 +6,6 @@
   "name_devbuild":{
     "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
     "message":"Pembangunan membina AdBlock"
-  },
-  "name_releasebuild":{
-    "description":"Extension name to be shown for release / published builds.  Should not be translated",
-    "message":"AdBlock"
   },
   "description_edge":{
     "message":"AdBlock. Penyekat iklan No. 1 dengan lebih 200 juta muat turun. Sekat iklan di seluruh web.",
@@ -70,10 +62,6 @@
   "safaributton_how_to_hide2":{
     "message":"Untuk menyembunyikan butang, klik kanan pada bar alatan Safari dan pilih Menyesuai Bar Alatan, kemudian seret butang AdBlock dari bar alatan. Anda boleh menunjukkannya sekali lagi dengan menyeretnya semula ke dalam bar alatan.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Customize Toolbar' should match the text that Safari displays in the toolbar's context menu."
-  },
-  "ff_button_how_to_hide":{
-    "message":"Untuk menyembunyikan butang, klik kanan dan pilih Buang daripada Bar Alatan. Anda boleh menunjukkannya semula di bawah menu Firefox -> Penyesuaian.",
-    "description":"Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
   "sliderexplanation":{
     "message":"Luncurkan gelangsar sehingga iklan disekat dengan betul pada halaman, dan elemen yang disekat kelihatan berguna.",
@@ -347,18 +335,6 @@
     "message":"Mengambil... tunggu sebentar.",
     "description":"Status label when selecting a new filter list"
   },
-  "ab_filters_subscription_lastDownload_invalidURL":{
-    "message":"Gagal, bukan alamt yang sah",
-    "description":"Filter lists tab of the Options page: Message when you subscribe to a non-list URL."
-  },
-  "ab_filters_subscription_lastDownload_connectionError":{
-    "message":"Gagal, kemas kini gagal",
-    "description":"Filter lists tab of the Options page: Generic filter list download error message."
-  },
-  "ab_filters_subscription_lastDownload_invalidData":{
-    "message":"Gagal, bukan senarai penapis yang sah",
-    "description":"Filter lists tab of the Options page: Invalid filter list file."
-  },
   "ab_filters_subscription_lastDownload_checksumMismatch":{
     "message":"Gagal, hasil tambah semak tidak sepadan",
     "description":"Filter lists tab of the Options page: Corrupted filter list file."
@@ -402,10 +378,6 @@
   "subscribebutton":{
     "message":"Langgan",
     "description":"Subscribe to a filter list button"
-  },
-  "showlinkstolists2":{
-    "message":"Tunjukkan pautan ke senarai penapis",
-    "description":"Label to display filter list links"
   },
   "filterantisocial":{
     "message":"Senarai penapis antisosial (mengeluarkan butang media sosial)",
@@ -1383,10 +1355,6 @@
     "message":"Halaman:",
     "description":"Caption for the whitelist wizard slider that modifies the path part of a URL"
   },
-  "show_ads_except_for":{
-    "message":"Tunjukkan iklan di mana-mana kecuali domain ini...",
-    "description":"Section title for the whitelisting section of Customize tab"
-  },
   "only_block_ads_on_these_sites":{
     "message":"Hanya sekat iklan di laman-laman ini:",
     "description":"Label for textbox where user enters a list of sites on Customize tab"
@@ -1443,22 +1411,6 @@
       }
     }
   },
-  "show_on_adblock_button":{
-    "message":"Tunjukkan bilangan iklan yang disekat pada butang AdBlock",
-    "description":"Checkbox letting user choose whether the toolbar button should show a badge with the number of ads blocked"
-  },
-  "show_on_adblock_menu":{
-    "message":"Tunjukkan bilangan iklan yang disekat pada menu AdBlock",
-    "description":"Checkbox letting user choose whether the AdBlock menu should show the number of ads blocked"
-  },
-  "show_on_button":{
-    "message":"Tunjukkan bilangan iklan yang disekat pada butang",
-    "description":"Checkbox letting user choose whether the toolbar button should show a badge with the number of ads blocked"
-  },
-  "show_on_menu":{
-    "message":"Tunjukkan bilangan iklan yang disekat pada menu",
-    "description":"Checkbox letting user choose whether the AdBlock menu should show the number of ads blocked"
-  },
   "block_ads_on_youtube":{
     "message":"Keluarkan iklan di YouTube™",
     "description":"Label for checkbox letting user choose whether to block ads on youtube.com"
@@ -1470,10 +1422,6 @@
   "block_annonyances_on_youtube":{
     "message":"Keluarkan gangguan di YouTube™",
     "description":"Checkbox letting user choose whether to block annoyances on youtube.com (such as comments, suggested videos, annotations, and recommended channels)"
-  },
-  "show_devtools_panel":{
-    "message":"Tunjukkan panel 'AdBlock' dalam alat pembangun",
-    "description":"Checkbox letting user choose whether the AdBlock tab should be displayed in the developer tools window"
   },
   "adblockinglist":{
     "message":"Senarai Penapis Penyekat Iklan",
@@ -1636,10 +1584,6 @@
   "headerfilter":{
     "message":"Penapis yang sesuai",
     "description":"Resource list page: title of a column"
-  },
-  "show_resourcelist":{
-    "message":"Tunjukkan semua permintaan",
-    "description":"Menu entry to open the resource list page"
   },
   "new_resourcelist_explanation_win":{
     "message":"Untuk menunjukkan semua permintaan, klik kanan halaman, pilih 'Periksa' (Ctrl+Shift+I), kemudian pilih tab 'AdBlock'.",
@@ -2124,5 +2068,17 @@
   "ok":{
     "message":"OK",
     "description":"Message for help flow in popup menu."
+  },
+  "help":{
+    "message":"Bantuan",
+    "description":"Text in the aria-label attribute of the support icon on the pop-up menu."
+  },
+  "settings":{
+    "message":"Tetapan",
+    "description":"Text in the aria-label attribute of the gear icon on the pop-up menu."
+  },
+  "error":{
+    "message":"Ralat",
+    "description":"Text in the aria-label attribute of an icon indicating an error occurred."
   }
 }
