--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -1,6 +1,6 @@
 {
   "description": {
-    "message": "De populairste Chrome-extensie, met meer dan 60 miljoen gebruikers! Blokkeert advertenties overal op internet.",
+    "message": "Blokkeer advertenties en pop-ups op YouTube, Facebook, Twitch en je favoriete websites.",
     "description": "Extension description in manifest. Should not exceed 132 characters."
   },
   "description2": {
@@ -12,8 +12,8 @@
     "message": "AdBlock development build"
   },
   "name_releasebuild": {
-    "description": "Extension name to be shown for release / published builds.  Should not be translated",
-    "message": "AdBlock"
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock - de beste advertentieblokker"
   },
   "description_edge": {
     "message": "AdBlock. De beste advertentieblokker met meer dan 200 miljoen downloads. Blokkeert advertenties overal op internet.",
@@ -1104,7 +1104,7 @@
     "description": "Instruction for how to check Chrome for a reported ad"
   },
   "ff_checkinchrome_2": {
-    "message": "Installeer Adblock voor Chrome als je dat nog niet hebt gedaan.",
+    "message": "Installeer AdBlock voor Chrome als je dat nog niet hebt gedaan.",
     "description": "Instruction for how to check Chrome for a reported ad"
   },
   "ff_checkinchrome_3": {
@@ -1230,11 +1230,11 @@
     "description": "Label at the bottom of the 'Customize' tab of the Options page"
   },
   "disabled_by_filter_lists": {
-    "message": "Sorry, Adblock is uitgeschakeld op deze pagina door een van je filterlijsten.",
+    "message": "Sorry, AdBlock is uitgeschakeld op deze pagina door een van je filterlijsten.",
     "description": "Message shown when a user tries to unwhitelist a web page that has been whitelisted by a rule in a subscribed filter list."
   },
   "disabled_by_filter_lists_yt": {
-    "message": "Sorry, Adblock op YouTube™ is uitgeschakeld op deze pagina door een van je opties.",
+    "message": "Sorry, AdBlock op YouTube™ is uitgeschakeld op deze pagina door een van je opties.",
     "description": "Message shown when a user tries to un-whitelist a web page that has been whitelisted by a rule in a subscribed filter list. Specific to the 'AdBlock on YouTube' extension."
   },
   "dont_run_on_pages_on_domain": {
@@ -2225,6 +2225,10 @@
     "message": "Rebecca Purple",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "solarized_light_theme": {
+    "message": "Zonlicht",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Thema toepassen",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
@@ -2278,24 +2282,8 @@
     "description": "The sub-title of an error message box in payment iframe in the Options page."
   },
   "sync_tab_item": {
-    "message": "Synchroniseren",
+    "message": "Back-uppen en synchroniseren",
     "description": "Title of the Sync sub-tab of the Options page"
-  },
-  "myadblock_sync_description": {
-    "message": "Synchroniseer je voorkeuren in meerdere browsers en op meerdere apparaten",
-    "description": "Text on the MyAdBlock tab, Sync panel of the Options page"
-  },
-  "sync_check_status_text": {
-    "message": "Synchroniseer en personaliseer AdBlock tussen al je extensies [[Status controleren]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_on_text": {
-    "message": "Synchroniseer en personaliseer AdBlock tussen al je extensies [[Synchroniseren inschakelen]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_off_btn_text": {
-    "message": "Uitschakelen",
-    "description": "button text on the Sync sub-tab of the Options page"
   },
   "sync_turn_on_invalid_name_text": {
     "message": "Geef deze extensie een naam om door te gaan",
@@ -2310,7 +2298,7 @@
     "description": "section title text on the Sync sub-tab of the Options page"
   },
   "sync_header_message_no_license": {
-    "message": "Geef ons even de tijd om synchroniseren beschikbaar te maken.",
+    "message": "Geef ons even de tijd om Synchroniseren voor te bereiden.",
     "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
   },
   "sync_header_message_getting_license": {
@@ -2334,31 +2322,23 @@
     "description": "start of error message to users on the sync page when sync fails."
   },
   "sync_header_message_setup_fail_part_2": {
-    "message": "Zet synchroniseren over een paar minuten weer aan.",
+    "message": "Probeer deze extensie over een paar minuten opnieuw toe te voegen.",
     "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_error_prefix": {
     "message": "Deze extensie was niet gesynchroniseerd.",
     "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
   },
-  "sync_header_message_error_suffix": {
-    "message": "Probeer het later opnieuw.",
-    "description": "Part of an sync error message to users on the Options page or AdBlock popup menu."
-  },
   "sync_header_message_old_commit_version_part_2": {
     "message": "We hebben deze extensie gesynchroniseerd en je wijzigingen ongedaan gemaakt.",
     "description": "part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_old_commit_version_part_3": {
-    "message": "Wijzig opnieuw.",
+    "message": "Vernieuw de pagina en voer je wijzigingen opnieuw door.",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
-  "sync_header_error_revert_message_part_2": {
-    "message": "Je wijzigingen zijn ongedaan gemaakt.",
-    "description": "part 2 of a message to users on the sync page when sending the sync data fails for some unknown reason."
-  },
   "sync_header_error_save_message_part_2": {
-    "message": "Synchroniseren van je wijzigingen mislukt.",
+    "message": "Deze extensie is niet gesynchroniseerd.",
     "description": "part 2 of a message to users on the Options pages when sending the sync data fails for some unknown reason."
   },
   "sync_header_error_save_message_part_3": {
@@ -2373,20 +2353,6 @@
     "message": "Kopieer je aangepaste regels naar het klembord, vernieuw de pagina en voer de wijzigingen opnieuw in.",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
-  "sync_header_error_message_menu_part_3": {
-    "message": "Voer de wijzigingen opnieuw in.",
-    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
-  },
-  "sync_show_name_text": {
-    "message": "[[$name$]] is nu gesynchroniseerd",
-    "description": "message to users on the sync page when which includes the name of the extension / device",
-    "placeholders": {
-      "name": {
-        "content": "$1",
-        "example": "Device 1"
-      }
-    }
-  },
   "sync_device_name_list_updated_at_msg": {
     "message": "laatst bijgewerkt op $timestamp$",
     "description": "message to users on when the sync page was last updated with the name of the extensions / devices (displayed in locale specific format)",
@@ -2398,24 +2364,12 @@
     }
   },
   "sync_extension_name_placeholder": {
-    "message": "Geef deze extensie een naam…",
+    "message": "Geef deze extensie een naam, zodat je hem kunt onderscheiden van andere...",
     "description": "placeholder text in the extension / device name field on the sync page"
   },
   "sync_verify_turn_on_text": {
-    "message": "Als je synchroniseren inschakelt, wordt bestaande instellingeninformatie voor deze extensie gewist.",
+    "message": "Als je Back-uppen en synchroniseren inschakelt, wordt bestaande instellingeninformatie voor deze extensie gewist.",
     "description": "message text in the extension / device name field on the sync page"
-  },
-  "sync_update_now_section_title": {
-    "message": "Handmatig synchroniseren",
-    "description": "section title for the sync now section on the sync page"
-  },
-  "sync_now_message_part_I": {
-    "message": "Ik werk automatisch bij.",
-    "description": "message text in the on the sync page "
-  },
-  "sync_now_message_part_II": {
-    "message": "Je kunt ook handmatig synchroniseren.",
-    "description": "message text in the on the sync page "
   },
   "sync_now_btn_text": {
     "message": "Nu synchroniseren",
@@ -2428,6 +2382,54 @@
   "sync_message_old_version_part_2": {
     "message": "[[Update AdBlock]] zodat we je instellingen kunnen synchroniseren.",
     "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_premium_cta": {
+    "message": "Je wordt een advertentieblokkerende pro met Premium-functies zoals Synchroniseren.",
+    "description": "AdBlock Premium CTA on the Sync tab"
+  },
+  "backup_sync_settings": {
+    "message": "Maak automatisch een back-up van je AdBlock-instellingen en synchroniseer ze op al je apparaten.",
+    "description": "Description of Sync on Sync tab"
+  },
+  "set_preferences_once": {
+    "message": "Stel je voorkeuren eenmaal in en maak je nooit meer zorgen over gegevensverlies of het opnieuw doorvoeren van dezelfde wijziging voor meerdere extensies.",
+    "description": "Description of Sync on Sync tab"
+  },
+  "get_sync": {
+    "message": "Haal Synchroniseren",
+    "description": "Link to pay for Sync (part of AdBlock Premium)"
+  },
+  "check_sync_status": {
+    "message": "Syncstatus controleren",
+    "description": "Button on Sync tab that checks the status of the Sync feature"
+  },
+  "show_details": {
+    "message": "Details weergeven",
+    "description": "Toggle that shows the details section"
+  },
+  "hide_details": {
+    "message": "Details verbergen",
+    "description": "Toggle that hides the details section"
+  },
+  "add_this_extension": {
+    "message": "Deze extensie toevoegen",
+    "description": "Button on Sync tab that adds this extension to the Sync process"
+  },
+  "add": {
+    "message": "Toevoegen",
+    "description": "Button on Sync tab that adds an entered name for this extension to the list of synced extensions"
+  },
+  "this_extension": {
+    "message": "(deze extensie)",
+    "description": "description for name of the current extension"
+  },
+  "confirm_delete_extension": {
+    "message": "Weet je zeker dat je deze extensie wilt verwijderen?",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+  },
+  "delete": {
+    "message": "Verwijderen",
+    "description": "Text on a delete button"
   },
   "filteracceptable_ads_privacy": {
     "message": "Privacy Acceptable Ads",
@@ -2511,7 +2513,7 @@
   },
   "new_badge": {
     "message": "Nieuw",
-    "description": "DO NOT TRANSLATE. Max 4 characters. Text in the badge of our extension toolbar icon."
+    "description": "Max 4 characters. If it's not possible to translate in four characters or less, please don't translate. Text in the badge of our extension toolbar icon."
   },
   "new_cta_default_text": {
     "message": "Upgrade je AdBlock",
@@ -2868,5 +2870,101 @@
   "resume_blocking_ads_period": {
     "message": "Blokkeren van advertenties hervatten.",
     "description": "First sentence in the aria-label of the pop-up menu action to resume blocking ads."
+  },
+  "do_not_swap_ads": {
+    "message": "Advertenties niet wisselen",
+    "description": "Text of a clickable option to stop swapping ads with images in the Options page Image Swap tab."
+  },
+  "premium": {
+    "message": "Premium",
+    "description": "Abbreviated name of the AdBlock upgrade."
+  },
+  "adblock_premium": {
+    "message": "AdBlock Premium",
+    "description": "Full name of the AdBlock upgrade."
+  },
+  "premium_enrollment_title": {
+    "message": "AdBlock Premium is ingesteld voor deze browser!",
+    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
+  },
+  "premium_enrollment_success": {
+    "message": "Je kunt de magische link gebruiken in je bevestigingsmail om AdBlock Premium te ontgrendelen in andere Chrome-browsers.",
+    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
+  },
+  "premium_enrollment_link_info": {
+    "message": "Als je op deze link klikt, kun je AdBlock Premium eenvoudig instellen in andere Chrome-browsers.",
+    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
+  },
+  "premium_page_title": {
+    "message": "AdBlock Premium: een betere manier om te surfen.",
+    "description": "The text of the header the AdBlock Premium Options page"
+  },
+  "premium_benefits_explained": {
+    "message": "In ruil voor je steun door het inschakelen van AdBlock Premium krijg je toegang tot de laatste gereedschappen en functies zodra die uit zijn.",
+    "description": "Main text of the teaser AdBlock Premium feature in the AdBlock Premium tab of the Options page"
+  },
+  "manage_subscription": {
+    "message": "Beheer je abonnement",
+    "description": "Text of link to manage the user's Premium subscription on the Premium tab of the Options page"
+  },
+  "save_custom_settings_cta": {
+    "message": "Wil je je aangepaste instellingen om advertenties te blokkeren kunnen opslaan en gebruiken in alle browsers?",
+    "description": "Part 1 of a Premium call-to-action on the Options page"
+  },
+  "try_backup_sync": {
+    "message": "Als dat zo is, probeer dan onze functie Back-uppen en synchroniseren.",
+    "description": "Part 2 of a Premium call-to-action on the Options page"
+  },
+  "wont_show_again": {
+    "message": "Oké, we geven dit bericht niet meer weer.",
+    "description": "Message shown when user opts out of call-to-action"
+  },
+  "check_out_premium": {
+    "message": "Als je op zoek bent naar meer informatie, bekijk dan [[Premium]].",
+    "description": "Part 2 of message shown when user opts out of call-to-action"
+  },
+  "successfully_whitelisted": {
+    "message": "Je hebt deze URL met succes gewhitelist.",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "future_show_ads": {
+    "message": "In de toekomst blijven deze pagina's advertenties weergeven.",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "change_behavior_settings": {
+    "message": "Je kunt dit gedrag aanpassen in je [[instellingen]].",
+    "description": "Part of a message on the whitelist and blacklist wizards"
+  },
+  "whitelisted_a_site": {
+    "message": "Je hebt zojuist een site gewhitelist!",
+    "description": "Part 1 of a call-to-action on the whitelist wizard"
+  },
+  "never_lose_settings": {
+    "message": "Pas deze instelling toe op al je apparaten en zorg ervoor dat je nooit je AdBlock-instellingen kwijtraakt met Back-uppen en synchroniseren.",
+    "description": "Part 2 of a call-to-action on the whitelist and blacklist wizards"
+  },
+  "successfully_blocked_ad": {
+    "message": "Je hebt deze advertentie met succes geblokkeerd.",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "future_ads_blocked": {
+    "message": "In de toekomst blijven de advertenties die voldoen aan deze regels geblokkeerd worden.",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "rule_added_filters": {
+    "message": "De volgende regel is toegevoegd aan je filters:",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "blocked_something": {
+    "message": "Je hebt zojuist iets geblokkeerd op deze site!",
+    "description": "Part 1 of a call-to-action on the blacklist wizard"
+  },
+  "adblock_looked_like_this": {
+    "message": "Wat als AdBlock er zo uit zou zien?",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "check_out_themes": {
+    "message": "Bekijk thema's!",
+    "description": "Part 2 of a call-to-action on the Popup menu"
   }
 }
