--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1,6 +1,6 @@
 {
   "description": {
-    "message": "A extensão do Chrome mais popular, com mais de 60 milhões de usuários! Bloqueia anúncios em toda a internet.",
+    "message": "Bloqueia anúncios e pop-ups no YouTube, Facebook, Twitch e seus sites favoritos.",
     "description": "Extension description in manifest. Should not exceed 132 characters."
   },
   "description2": {
@@ -12,8 +12,8 @@
     "message": "Versão de desenvolvimento AdBlock"
   },
   "name_releasebuild": {
-    "description": "Extension name to be shown for release / published builds.  Should not be translated",
-    "message": "AdBlock"
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock — o melhor bloqueador de anúncios"
   },
   "description_edge": {
     "message": "AdBlock. O bloqueador de anúncios Nº1 com mais de 200 milhões de downloads. Bloqueia anúncios em toda a internet.",
@@ -2225,6 +2225,10 @@
     "message": "Roxo Rebecca",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
+  "solarized_light_theme": {
+    "message": "Luz Solarizada",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
   "apply_theme": {
     "message": "Aplicar tema",
     "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
@@ -2278,24 +2282,8 @@
     "description": "The sub-title of an error message box in payment iframe in the Options page."
   },
   "sync_tab_item": {
-    "message": "Sincronização",
+    "message": "Backup e Sincronização",
     "description": "Title of the Sync sub-tab of the Options page"
-  },
-  "myadblock_sync_description": {
-    "message": "Sincronize suas preferências em vários dispositivos e navegadores.",
-    "description": "Text on the MyAdBlock tab, Sync panel of the Options page"
-  },
-  "sync_check_status_text": {
-    "message": "Sincronize e personalize o AdBlock em todas as suas extensões. [[Verificar status]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_on_text": {
-    "message": "Sincronize e personalize AdBlock em todas as suas extensões.  [[Ativar sincronização]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_off_btn_text": {
-    "message": "Desativar",
-    "description": "button text on the Sync sub-tab of the Options page"
   },
   "sync_turn_on_invalid_name_text": {
     "message": "Dê um nome para essa extensão para continuar",
@@ -2310,7 +2298,7 @@
     "description": "section title text on the Sync sub-tab of the Options page"
   },
   "sync_header_message_no_license": {
-    "message": "Aguarde um momento enquanto disponibilizamos a sincronização.",
+    "message": "Aguarde um momento para prepararmos a Sincronização para você.",
     "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
   },
   "sync_header_message_getting_license": {
@@ -2318,7 +2306,7 @@
     "description": "message to users on the sync page when the extension is getting the license"
   },
   "sync_header_message_in_progress": {
-    "message": "Sincronização em progresso…",
+    "message": "Sincronização em progresso...",
     "description": "message to users on the options pages when syncing with the server is in progress"
   },
   "sync_header_message_sync_complete": {
@@ -2334,31 +2322,23 @@
     "description": "start of error message to users on the sync page when sync fails."
   },
   "sync_header_message_setup_fail_part_2": {
-    "message": "Tente ligar a sincronização novamente dentro de alguns minutos.",
+    "message": "Tente adicionar essa extensão novamente em alguns minutos.",
     "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_error_prefix": {
     "message": "Esta extensão ficou fora de sincronização.",
     "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
   },
-  "sync_header_message_error_suffix": {
-    "message": "Tente novamente mais tarde.",
-    "description": "Part of an sync error message to users on the Options page or AdBlock popup menu."
-  },
   "sync_header_message_old_commit_version_part_2": {
     "message": "Sincronizamos esta extensão e revertemos suas alterações.",
     "description": "part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_old_commit_version_part_3": {
-    "message": "Faça as alterações novamente.",
+    "message": "Atualize a página e faça suas alterações novamente.",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
-  "sync_header_error_revert_message_part_2": {
-    "message": "Suas alterações foram revertidas.",
-    "description": "part 2 of a message to users on the sync page when sending the sync data fails for some unknown reason."
-  },
   "sync_header_error_save_message_part_2": {
-    "message": "Não conseguimos sincronizar suas alterações.",
+    "message": "Essa extensão está fora de sincronização.",
     "description": "part 2 of a message to users on the Options pages when sending the sync data fails for some unknown reason."
   },
   "sync_header_error_save_message_part_3": {
@@ -2373,20 +2353,6 @@
     "message": "Copie suas regras personalizadas para a área de transferência, atualize a página, e faça as alterações novamente.",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
-  "sync_header_error_message_menu_part_3": {
-    "message": "Faça as alterações novamente.",
-    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
-  },
-  "sync_show_name_text": {
-    "message": "[[$name$]] foi sincronizada",
-    "description": "message to users on the sync page when which includes the name of the extension / device",
-    "placeholders": {
-      "name": {
-        "content": "$1",
-        "example": "Device 1"
-      }
-    }
-  },
   "sync_device_name_list_updated_at_msg": {
     "message": "atualizada pela última vez em $timestamp$",
     "description": "message to users on when the sync page was last updated with the name of the extensions / devices (displayed in locale specific format)",
@@ -2398,24 +2364,12 @@
     }
   },
   "sync_extension_name_placeholder": {
-    "message": "Nomeie esta extensão…",
+    "message": "Dê um nome para essa extensão para que você possa distingui-la das outras...",
     "description": "placeholder text in the extension / device name field on the sync page"
   },
   "sync_verify_turn_on_text": {
-    "message": "Ativar a sincronização substituirá as informações de configuração existentes para essa extensão.",
+    "message": "Ativar o Backup e Sincronização substituirá as informações de configuração existentes para essa extensão.",
     "description": "message text in the extension / device name field on the sync page"
-  },
-  "sync_update_now_section_title": {
-    "message": "Sincronização manual",
-    "description": "section title for the sync now section on the sync page"
-  },
-  "sync_now_message_part_I": {
-    "message": "Vou atualizar automaticamente.",
-    "description": "message text in the on the sync page "
-  },
-  "sync_now_message_part_II": {
-    "message": "Você também pode sincronizar manualmente.",
-    "description": "message text in the on the sync page "
   },
   "sync_now_btn_text": {
     "message": "Sincronizar agora",
@@ -2428,6 +2382,54 @@
   "sync_message_old_version_part_2": {
     "message": "[[Atualize o AdBlock]] para que possamos sincronizar suas configurações.",
     "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_premium_cta": {
+    "message": "Você será profissional em bloquear anúncios com funções Premium como a Sincronização.",
+    "description": "AdBlock Premium CTA on the Sync tab"
+  },
+  "backup_sync_settings": {
+    "message": "Crie uma cópia de segurança e sincronize suas configurações do AdBlock automaticamente entre todos os seus dispositivos.",
+    "description": "Description of Sync on Sync tab"
+  },
+  "set_preferences_once": {
+    "message": "Defina suas preferências apenas uma vez e nunca mais se preocupe com perda de dados nem em fazer as mesmas configurações em extensões diferentes.",
+    "description": "Description of Sync on Sync tab"
+  },
+  "get_sync": {
+    "message": "Desbloqueie a Sincronização",
+    "description": "Link to pay for Sync (part of AdBlock Premium)"
+  },
+  "check_sync_status": {
+    "message": "Verificar estado da sincronização",
+    "description": "Button on Sync tab that checks the status of the Sync feature"
+  },
+  "show_details": {
+    "message": "Exibir detalhes",
+    "description": "Toggle that shows the details section"
+  },
+  "hide_details": {
+    "message": "Ocultar detalhes",
+    "description": "Toggle that hides the details section"
+  },
+  "add_this_extension": {
+    "message": "Adicionar essa extensão",
+    "description": "Button on Sync tab that adds this extension to the Sync process"
+  },
+  "add": {
+    "message": "Adicionar",
+    "description": "Button on Sync tab that adds an entered name for this extension to the list of synced extensions"
+  },
+  "this_extension": {
+    "message": "(essa extensão)",
+    "description": "description for name of the current extension"
+  },
+  "confirm_delete_extension": {
+    "message": "Tem certeza de que deseja excluir essa extensão?",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+  },
+  "delete": {
+    "message": "Excluir",
+    "description": "Text on a delete button"
   },
   "filteracceptable_ads_privacy": {
     "message": "Privacidade dos Anúncios Aceitáveis",
@@ -2511,7 +2513,7 @@
   },
   "new_badge": {
     "message": "Novo",
-    "description": "DO NOT TRANSLATE. Max 4 characters. Text in the badge of our extension toolbar icon."
+    "description": "Max 4 characters. If it's not possible to translate in four characters or less, please don't translate. Text in the badge of our extension toolbar icon."
   },
   "new_cta_default_text": {
     "message": "Atualize seu AdBlock",
@@ -2868,5 +2870,101 @@
   "resume_blocking_ads_period": {
     "message": "Retomar o bloqueio de anúncios.",
     "description": "First sentence in the aria-label of the pop-up menu action to resume blocking ads."
+  },
+  "do_not_swap_ads": {
+    "message": "Não substitua anúncios",
+    "description": "Text of a clickable option to stop swapping ads with images in the Options page Image Swap tab."
+  },
+  "premium": {
+    "message": "Premium",
+    "description": "Abbreviated name of the AdBlock upgrade."
+  },
+  "adblock_premium": {
+    "message": "AdBlock Premium",
+    "description": "Full name of the AdBlock upgrade."
+  },
+  "premium_enrollment_title": {
+    "message": "AdBlock Premium foi configurado nesse navegador!",
+    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
+  },
+  "premium_enrollment_success": {
+    "message": "Você pode usar o link mágico no seu e-mail de confirmação para desbloquear o AdBlock Premium em outros navegadores Chrome.",
+    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
+  },
+  "premium_enrollment_link_info": {
+    "message": "Clicar no link facilita a configuração do AdBlock Premium em outros navegadores Chrome.",
+    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
+  },
+  "premium_page_title": {
+    "message": "AdBlock Premium: uma maneira melhor de navegar na internet.",
+    "description": "The text of the header the AdBlock Premium Options page"
+  },
+  "premium_benefits_explained": {
+    "message": "Como reconhecimento por habilitar o AdBlock Premium, você terá acesso às ferramentas e recursos mais recentes assim que elas forem lançadas.",
+    "description": "Main text of the teaser AdBlock Premium feature in the AdBlock Premium tab of the Options page"
+  },
+  "manage_subscription": {
+    "message": "Gerenciar sua assinatura",
+    "description": "Text of link to manage the user's Premium subscription on the Premium tab of the Options page"
+  },
+  "save_custom_settings_cta": {
+    "message": "Gostaria de salvar suas configurações de bloqueio de anúncios personalizadas e usá-las em todos os navegadores?",
+    "description": "Part 1 of a Premium call-to-action on the Options page"
+  },
+  "try_backup_sync": {
+    "message": "Caso queira, experimente nosso recurso de cópia de segurança e sincronização.",
+    "description": "Part 2 of a Premium call-to-action on the Options page"
+  },
+  "wont_show_again": {
+    "message": "OK, não vamos mostrar essa mensagem para você novamente.",
+    "description": "Message shown when user opts out of call-to-action"
+  },
+  "check_out_premium": {
+    "message": "Caso você queira saber mais, dê uma olhada no [[Premium]].",
+    "description": "Part 2 of message shown when user opts out of call-to-action"
+  },
+  "successfully_whitelisted": {
+    "message": "Você inseriu esse URL na lista de exceções com sucesso.",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "future_show_ads": {
+    "message": "No futuro, essas páginas continuarão a mostrar anúncios.",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "change_behavior_settings": {
+    "message": "Você pode alterar esse comportamento em suas [[configurações]].",
+    "description": "Part of a message on the whitelist and blacklist wizards"
+  },
+  "whitelisted_a_site": {
+    "message": "Você acaba de adicionar um site na lista de exceções!",
+    "description": "Part 1 of a call-to-action on the whitelist wizard"
+  },
+  "never_lose_settings": {
+    "message": "Aplique essa configuração em todos os seus dispositivos para garantir que você nunca perca suas configurações do AdBlock com a cópia de segurança e sincronização.",
+    "description": "Part 2 of a call-to-action on the whitelist and blacklist wizards"
+  },
+  "successfully_blocked_ad": {
+    "message": "Você bloqueou esse anúncio com sucesso.",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "future_ads_blocked": {
+    "message": "No futuro, anúncios que corresponderem a essas regras continuarão a ser bloqueados.",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "rule_added_filters": {
+    "message": "A seguinte regra foi adicionada aos seus filtros:",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "blocked_something": {
+    "message": "Você acabou de bloquear algo nesse site!",
+    "description": "Part 1 of a call-to-action on the blacklist wizard"
+  },
+  "adblock_looked_like_this": {
+    "message": "E se o AdBlock tivesse essa aparência?",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "check_out_themes": {
+    "message": "Confira os temas!",
+    "description": "Part 2 of a call-to-action on the Popup menu"
   }
 }
