--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -1,6 +1,6 @@
 {
   "description": {
-    "message": "最受歡迎的 Chrome 擴充功能，擁有超過六千萬使用者！阻擋網路上的各種廣告。",
+    "message": "在 YouTube、Facebook、Twitch 以及其他您喜愛的網站上阻擋廣告與彈出視窗。",
     "description": "Extension description in manifest. Should not exceed 132 characters."
   },
   "description2": {
@@ -12,8 +12,8 @@
     "message": "AdBlock 開發版本"
   },
   "name_releasebuild": {
-    "description": "Extension name to be shown for release / published builds.  Should not be translated",
-    "message": "AdBlock"
+    "description": "Extension name to be shown for release / published builds.  The extension name 'AdBlock' should NOT be translated, but the text after the dash should be translated",
+    "message": "AdBlock — 最佳廣告攔截程式"
   },
   "description_edge": {
     "message": "AdBlock。排名第一的廣告攔截程式，下載量超過兩億。阻擋網路上的各種廣告。",
@@ -2210,7 +2210,7 @@
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "solarized_theme": {
-    "message": "曝光",
+    "message": "Solarized",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "ocean_theme": {
@@ -2223,6 +2223,10 @@
   },
   "rebecca_purple_theme": {
     "message": "雷貝嘉紫色",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "solarized_light_theme": {
+    "message": "Solarized Light",
     "description": "Name of a theme in the Themes tab of the Options page"
   },
   "apply_theme": {
@@ -2278,24 +2282,8 @@
     "description": "The sub-title of an error message box in payment iframe in the Options page."
   },
   "sync_tab_item": {
-    "message": "同步",
+    "message": "備份與同步",
     "description": "Title of the Sync sub-tab of the Options page"
-  },
-  "myadblock_sync_description": {
-    "message": "在多個瀏覽器與裝置上同步您的偏好設定",
-    "description": "Text on the MyAdBlock tab, Sync panel of the Options page"
-  },
-  "sync_check_status_text": {
-    "message": "在您不同的擴充套件中同步並自訂 AdBlock [[檢查狀態]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_on_text": {
-    "message": "在您不同的擴充套件中同步並自訂 AdBlock [[開啟同步]]",
-    "description": "message and button text on the Sync sub-tab of the Options page"
-  },
-  "sync_turn_off_btn_text": {
-    "message": "關閉",
-    "description": "button text on the Sync sub-tab of the Options page"
   },
   "sync_turn_on_invalid_name_text": {
     "message": "請命名此擴充套件然後繼續",
@@ -2310,7 +2298,7 @@
     "description": "section title text on the Sync sub-tab of the Options page"
   },
   "sync_header_message_no_license": {
-    "message": "請給我們一點時間來同步。",
+    "message": "請容我們花一點時間為您準備同步。",
     "description": "message to users on the sync page when the license is unavailable, inactive or a license ID hasn't been returned yet"
   },
   "sync_header_message_getting_license": {
@@ -2334,35 +2322,27 @@
     "description": "start of error message to users on the sync page when sync fails."
   },
   "sync_header_message_setup_fail_part_2": {
-    "message": "請在幾分鐘後再次嘗試開啟同步。",
+    "message": "請在幾分鐘後再次嘗試新增此擴充套件。",
     "description": "message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_error_prefix": {
     "message": "此擴充套件未同步。",
     "description": "Start of an sync error message to users on the Options page or AdBlock popup menu."
   },
-  "sync_header_message_error_suffix": {
-    "message": "請稍後再試。",
-    "description": "Part of an sync error message to users on the Options page or AdBlock popup menu."
-  },
   "sync_header_message_old_commit_version_part_2": {
     "message": "我們已同步此擴充套件並還原了您的變更。",
     "description": "part 2 of a message to users on the sync page and popup menu when initial setup of sync fails for some unknown reason."
   },
   "sync_header_message_old_commit_version_part_3": {
-    "message": "請再次進行變更。",
+    "message": "請重新載入頁面，然後再次進行變更。",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
   },
-  "sync_header_error_revert_message_part_2": {
-    "message": "您的變更已還原。",
-    "description": "part 2 of a message to users on the sync page when sending the sync data fails for some unknown reason."
-  },
   "sync_header_error_save_message_part_2": {
-    "message": "我們無法同步您的變更。",
+    "message": "此擴充套件未同步。",
     "description": "part 2 of a message to users on the Options pages when sending the sync data fails for some unknown reason."
   },
   "sync_header_error_save_message_part_3": {
-    "message": "請稍候再嘗試手動同步。",
+    "message": "請稍後再嘗試手動同步。",
     "description": "part 3 of a message to users on the Options pages when sending the sync data fails for some unknown reason."
   },
   "sync_header_message_old_commit_version_customize_tab_part_2": {
@@ -2372,20 +2352,6 @@
   "sync_header_message_old_commit_version_customize_tab_part_3": {
     "message": "請將自訂規則複製到剪貼簿，重新載入頁面，然後再次進行變更。",
     "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
-  },
-  "sync_header_error_message_menu_part_3": {
-    "message": "請再次進行變更。",
-    "description": "part 3 of a message to users on the sync page when initial setup of sync fails for some unknown reason."
-  },
-  "sync_show_name_text": {
-    "message": "[[$name$]] 現已同步",
-    "description": "message to users on the sync page when which includes the name of the extension / device",
-    "placeholders": {
-      "name": {
-        "content": "$1",
-        "example": "Device 1"
-      }
-    }
   },
   "sync_device_name_list_updated_at_msg": {
     "message": "上次更新於 $timestamp$",
@@ -2398,24 +2364,12 @@
     }
   },
   "sync_extension_name_placeholder": {
-    "message": "將此擴充套件命名……",
+    "message": "請命名此擴充套件，以便與其他擴充套件區別……",
     "description": "placeholder text in the extension / device name field on the sync page"
   },
   "sync_verify_turn_on_text": {
-    "message": "開啟同步將清除此擴充套件目前的設定資訊。",
+    "message": "開啟「備份與同步」功能將清除此擴充套件中的現有設定資訊。",
     "description": "message text in the extension / device name field on the sync page"
-  },
-  "sync_update_now_section_title": {
-    "message": "手動同步",
-    "description": "section title for the sync now section on the sync page"
-  },
-  "sync_now_message_part_I": {
-    "message": "我會自動更新。",
-    "description": "message text in the on the sync page "
-  },
-  "sync_now_message_part_II": {
-    "message": "您也可以手動更新。",
-    "description": "message text in the on the sync page "
   },
   "sync_now_btn_text": {
     "message": "立即同步",
@@ -2428,6 +2382,54 @@
   "sync_message_old_version_part_2": {
     "message": "請[[更新 AdBlock]] 以便我們將您的設定同步。",
     "description": "button text on the Sync sub-tab of the Options page"
+  },
+  "sync_premium_cta": {
+    "message": "有了「同步」等 Premium 功能，您將成為廣告攔截專家。",
+    "description": "AdBlock Premium CTA on the Sync tab"
+  },
+  "backup_sync_settings": {
+    "message": "在所有裝置上自動備份與同步您的 AdBlock 設定。",
+    "description": "Description of Sync on Sync tab"
+  },
+  "set_preferences_once": {
+    "message": "只需設定一次偏好設定，就永遠不需擔心資料遺失或需要再對多個擴充套件進行相同的變更。",
+    "description": "Description of Sync on Sync tab"
+  },
+  "get_sync": {
+    "message": "取得同步功能",
+    "description": "Link to pay for Sync (part of AdBlock Premium)"
+  },
+  "check_sync_status": {
+    "message": "檢查同步狀態",
+    "description": "Button on Sync tab that checks the status of the Sync feature"
+  },
+  "show_details": {
+    "message": "顯示詳細資訊",
+    "description": "Toggle that shows the details section"
+  },
+  "hide_details": {
+    "message": "隱藏詳細資訊",
+    "description": "Toggle that hides the details section"
+  },
+  "add_this_extension": {
+    "message": "新增此擴充套件",
+    "description": "Button on Sync tab that adds this extension to the Sync process"
+  },
+  "add": {
+    "message": "新增",
+    "description": "Button on Sync tab that adds an entered name for this extension to the list of synced extensions"
+  },
+  "this_extension": {
+    "message": "（此擴充套件）",
+    "description": "description for name of the current extension"
+  },
+  "confirm_delete_extension": {
+    "message": "確定要刪除此擴充套件嗎？",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+  },
+  "delete": {
+    "message": "刪除",
+    "description": "Text on a delete button"
   },
   "filteracceptable_ads_privacy": {
     "message": "可接受廣告政策",
@@ -2510,8 +2512,8 @@
     "message": "類型"
   },
   "new_badge": {
-    "message": "New",
-    "description": "DO NOT TRANSLATE. Max 4 characters. Text in the badge of our extension toolbar icon."
+    "message": "新",
+    "description": "Max 4 characters. If it's not possible to translate in four characters or less, please don't translate. Text in the badge of our extension toolbar icon."
   },
   "new_cta_default_text": {
     "message": "升級您的 AdBlock",
@@ -2868,5 +2870,101 @@
   "resume_blocking_ads_period": {
     "message": "恢復阻擋廣告。",
     "description": "First sentence in the aria-label of the pop-up menu action to resume blocking ads."
+  },
+  "do_not_swap_ads": {
+    "message": "不要換廣告",
+    "description": "Text of a clickable option to stop swapping ads with images in the Options page Image Swap tab."
+  },
+  "premium": {
+    "message": "Premium",
+    "description": "Abbreviated name of the AdBlock upgrade."
+  },
+  "adblock_premium": {
+    "message": "AdBlock Premium",
+    "description": "Full name of the AdBlock upgrade."
+  },
+  "premium_enrollment_title": {
+    "message": "AdBlock Premium 已在此瀏覽器中設定完成！",
+    "description": "DO NOT TRANSLATE. The title of the AdBlock Premium enrollment box."
+  },
+  "premium_enrollment_success": {
+    "message": "您可以使用確認信中的一鍵連結，在其他 Chrome 瀏覽器中解鎖 AdBlock Premium。",
+    "description": "DO NOT TRANSLATE. AdBlock Premium successfully licensed message."
+  },
+  "premium_enrollment_link_info": {
+    "message": "Clicking the link makes it easy to set up AdBlock Premium in other Chrome browsers.",
+    "description": "DO NOT TRANSLATE. Explains what happens when clicking the magic link."
+  },
+  "premium_page_title": {
+    "message": "AdBlock Premium：瀏覽網路的更好方式。",
+    "description": "The text of the header the AdBlock Premium Options page"
+  },
+  "premium_benefits_explained": {
+    "message": "為了感謝您支持我們並啟用 AdBlock Premium，您將在最新工具與功能推出時獲得優先使用權。",
+    "description": "Main text of the teaser AdBlock Premium feature in the AdBlock Premium tab of the Options page"
+  },
+  "manage_subscription": {
+    "message": "管理您的訂閱",
+    "description": "Text of link to manage the user's Premium subscription on the Premium tab of the Options page"
+  },
+  "save_custom_settings_cta": {
+    "message": "您是否要儲存自訂廣告攔截設定並在每個瀏覽器中使用？",
+    "description": "Part 1 of a Premium call-to-action on the Options page"
+  },
+  "try_backup_sync": {
+    "message": "如果是，請嘗試我們的「備份與同步」功能。",
+    "description": "Part 2 of a Premium call-to-action on the Options page"
+  },
+  "wont_show_again": {
+    "message": "好的，我們不會再顯示此訊息。",
+    "description": "Message shown when user opts out of call-to-action"
+  },
+  "check_out_premium": {
+    "message": "如果想進一步了解，請參閱 [[Premium]]。",
+    "description": "Part 2 of message shown when user opts out of call-to-action"
+  },
+  "successfully_whitelisted": {
+    "message": "您已成功將此 URL 列入白名單。",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "future_show_ads": {
+    "message": "以後這些頁面將繼續顯示廣告。",
+    "description": "Part of a message on the whitelist wizard"
+  },
+  "change_behavior_settings": {
+    "message": "您可以在[[設定]]中更改此動作。",
+    "description": "Part of a message on the whitelist and blacklist wizards"
+  },
+  "whitelisted_a_site": {
+    "message": "您剛剛將一個網站列入白名單！",
+    "description": "Part 1 of a call-to-action on the whitelist wizard"
+  },
+  "never_lose_settings": {
+    "message": "將此設定套用到所有裝置，並使用「備份與同步」以確保您不會遺失您的 AdBlock 設定。",
+    "description": "Part 2 of a call-to-action on the whitelist and blacklist wizards"
+  },
+  "successfully_blocked_ad": {
+    "message": "您已成功阻擋這個廣告。",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "future_ads_blocked": {
+    "message": "以後將會繼續阻擋符合這些規則的廣告。",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "rule_added_filters": {
+    "message": "以下規則已加入您的過濾條件中：",
+    "description": "Part of a message on the blacklist wizard"
+  },
+  "blocked_something": {
+    "message": "您剛剛阻擋了這個網站上的內容！",
+    "description": "Part 1 of a call-to-action on the blacklist wizard"
+  },
+  "adblock_looked_like_this": {
+    "message": "如果 AdBlock 看起來像這樣呢？",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "check_out_themes": {
+    "message": "快來看看各種主題！",
+    "description": "Part 2 of a call-to-action on the Popup menu"
   }
 }
